# wasm-hostcall-example

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
hello/: Cargo.toml  Makefile
hello/src/: lib.rs
src/: exports.rs  main.rs  model.rs  models.rs
wasm/: Cargo.toml
wasm/src/: imports.rs  lib.rs
