[package]
authors = ["rich-murphey <rich@murphey.org>"]
name = "wasm-hostcall-example"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
arrayvec = "0.5.1"
rmp-serde = "0.14.3"
serde = { version = "1.0.114", features = ["derive"] }
wasm-bindgen = "0.2.63"
wasmtime = "0.18.0"
wasmtime-wasi = "0.18.0"
